--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "city_count = cities.values()\n",
+    "city_count = cities.()\n",
     "city_count # 12"
    ]
   },
