Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "city_count = cities'City']\n",
+    "city_count = cities.len('city')'City']\n",
     "city_count # 12"
    ]
   },
