--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "city_count = cities.values('City')\n",
+    "city_count = cities.va('City')\n",
     "city_count # 12"
    ]
   },
