Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "city_count = cities[:,11]\n",
+    "city_count = list(cities[:,11]\n",
     "city_count # 12"
    ]
   },
