Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = PyeongChang.values()\n",
+    "pyeongchang_values = .values()\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
