--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = \n",
+    "pyeongchang_keys = Pye\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
