--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = PyeongChang.keys()\n",
+    "pyeongchang_keys = citi()\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
